// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcDropdown > #slots > should forward CTA slot 1`] = `
<li
  class="ec-dropdown-search__cta-area"
  data-test="ec-dropdown-search__cta-area ec-mock ec-tooltip-mock"
>
  
  
  <button>
    My CTA
  </button>
  
  
</li>
`;

exports[`EcDropdown > #slots > should forward CTA slot with tooltip 1`] = `
<li
  class="ec-dropdown-search__cta-area"
  data-ec-tooltip-mock-content="Random tooltip"
  data-test="ec-dropdown-search__cta-area ec-mock ec-tooltip-mock"
>
  
  
  <button>
    My CTA
  </button>
  
  
</li>
`;

exports[`EcDropdown > #slots > should forward item slot 1`] = `
<ul
  class="ec-dropdown-search__item-list"
  data-test="ec-dropdown-search__item-list"
>
  <!--v-if-->
  <!--v-if-->
  
  
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
    title="Item 1"
  >
    
    
    <div>
      (0) Item 1 - false
    </div>
    
    
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
    title="Item 2"
  >
    
    
    <div>
      (1) Item 2 - false
    </div>
    
    
  </li>
  <li
    class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
    title="Item 3"
  >
    
    
    <div>
      (2) Item 3 - true
    </div>
    
    
  </li>
  <li
    class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
    data-ec-tooltip-mock-content="Random text"
    data-ec-tooltip-mock-placement="right"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
    title="Item 4"
  >
    
    
    <div>
      (3) Item 4 - false
    </div>
    
    
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
    title="Item 5"
  >
    
    
    <div>
      (4) Item 5 - false
    </div>
    
    
  </li>
  
  
</ul>
`;

exports[`EcDropdown > :props > should enable search when isSearchEnabled is set to true 1`] = `
<li
  class="ec-dropdown-search__search-area"
  data-test="ec-dropdown-search__search-area"
>
  <svg
    class="ec-icon ec-dropdown-search__search-icon"
  >
    <use
      xlink:href="#ec-simple-search"
    />
  </svg>
  <input
    autocomplete="off"
    class="ec-dropdown-search__search-input"
    data-test="ec-dropdown-search__search-input"
    placeholder="Search..."
  />
</li>
`;

exports[`EcDropdown > :props > should get disabled when disabled prop is set 1`] = `
<div
  class="ec-dropdown ec-dropdown-search"
  data-test="ec-dropdown ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="true"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--has-icon ec-input-field__input--cursor-pointer"
        data-test="ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
        disabled=""
        id="ec-input-field-1"
        placeholder=""
        readonly=""
        type="text"
      />
      <!--v-if-->
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right ec-input-field__icon-wrapper--is-disabled"
        data-test="ec-input-field__icon-wrapper"
      >
        <!--v-if-->
        <svg
          class="ec-icon ec-input-field__icon"
          data-test="ec-input-field__icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
      <!--v-if-->
    </div>
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <!--v-if-->
        <!--v-if-->
        
        
        
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdown > :props > should not show the items when the loading is set to true 1`] = `
<div
  class="ec-dropdown ec-dropdown-search"
  data-test="ec-dropdown ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--has-icon ec-input-field__input--cursor-pointer"
        data-test="ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
        id="ec-input-field-1"
        placeholder=""
        readonly=""
        type="text"
      />
      <!--v-if-->
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
        data-test="ec-input-field__icon-wrapper"
      >
        <!--v-if-->
        <svg
          class="ec-icon ec-input-field__icon"
          data-test="ec-input-field__icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
      <!--v-if-->
    </div>
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <!--v-if-->
        <!--v-if-->
        <li>
          <div
            class="ec-loading"
            data-test="ec-loading"
          >
            <div
              class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
              data-test="ec-loading__backdrop"
            >
              <svg
                class="ec-icon ec-loading__icon"
                data-test="ec-loading__icon"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-simple-loading"
                />
              </svg>
            </div>
            <div
              class="ec-loading__content ec-loading__content--is-transparent"
              data-test="ec-loading__content"
            >
              
              <div
                class="ec-dropdown-search__loading"
                data-test="ec-dropdown-search__loading"
              />
              
            </div>
          </div>
        </li>
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdown > :props > should pass errorMessage prop to the triggering input 1`] = `
<div
  class="ec-input-field__error-text"
  data-test="ec-input-field__error-text"
  id="ec-input-field-error-1"
>
  Random error
</div>
`;

exports[`EcDropdown > :props > should pass label prop to the triggering input 1`] = `
<label
  class="ec-input-field__label"
  data-test="ec-input-field__label"
  for="ec-input-field-1"
>
  <span
    class="ec-input-field__label-text"
    data-test="ec-input-field__label-text"
  >
    Random label
    <!--v-if-->
  </span>
  <!--v-if-->
</label>
`;

exports[`EcDropdown > :props > should render given popover style 1`] = `
<div
  class="ec-dropdown ec-dropdown-search"
  data-test="ec-dropdown ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--has-icon ec-input-field__input--cursor-pointer"
        data-test="ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
        id="ec-input-field-1"
        placeholder=""
        readonly=""
        type="text"
      />
      <!--v-if-->
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
        data-test="ec-input-field__icon-wrapper"
      >
        <!--v-if-->
        <svg
          class="ec-icon ec-input-field__icon"
          data-test="ec-input-field__icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
      <!--v-if-->
    </div>
    
    
    
    <div
      style="width: 1234px;"
    >
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <!--v-if-->
        <!--v-if-->
        
        
        
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdown > :props > should render given popover style when it is a function 1`] = `
<div
  class="ec-dropdown ec-dropdown-search"
  data-test="ec-dropdown ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--has-icon ec-input-field__input--cursor-pointer"
        data-test="ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
        id="ec-input-field-1"
        placeholder=""
        readonly=""
        type="text"
      />
      <!--v-if-->
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
        data-test="ec-input-field__icon-wrapper"
      >
        <!--v-if-->
        <svg
          class="ec-icon ec-input-field__icon"
          data-test="ec-input-field__icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
      <!--v-if-->
    </div>
    
    
    
    <div
      style="width: 1234px;"
    >
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <!--v-if-->
        <!--v-if-->
        
        
        
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdown > :props > should render properly when the labelTooltip prop is set 1`] = `
<div
  class="ec-dropdown ec-dropdown-search"
  data-test="ec-dropdown ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--has-icon ec-input-field__input--cursor-pointer"
        data-test="ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
        id="ec-input-field-1"
        placeholder=""
        readonly=""
        type="text"
      />
      <!--v-if-->
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
        data-test="ec-input-field__icon-wrapper"
      >
        <!--v-if-->
        <svg
          class="ec-icon ec-input-field__icon"
          data-test="ec-input-field__icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
      <!--v-if-->
    </div>
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <!--v-if-->
        <!--v-if-->
        
        
        
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdown > :props > should render with a sensitive class when isSensitive prop is set to true 1`] = `
<div
  class="ec-dropdown ec-dropdown-search"
  data-test="ec-dropdown ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--has-icon my-sensitive-content-test-class ec-input-field__input--cursor-pointer"
        data-test="ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
        id="ec-input-field-1"
        placeholder=""
        readonly=""
        type="text"
      />
      <!--v-if-->
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
        data-test="ec-input-field__icon-wrapper"
      >
        <!--v-if-->
        <svg
          class="ec-icon ec-input-field__icon"
          data-test="ec-input-field__icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
      <!--v-if-->
    </div>
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list my-sensitive-content-test-class"
        data-test="ec-dropdown-search__item-list"
      >
        <!--v-if-->
        <!--v-if-->
        
        
        
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdown > :props > should use placeholder prop 1`] = `
<input
  class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--has-icon ec-input-field__input--cursor-pointer"
  data-test="ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
  id="ec-input-field-1"
  placeholder="Random placeholder"
  readonly=""
  type="text"
/>
`;

exports[`EcDropdown > :props > should use searchPlaceholder prop if search is enabled 1`] = `
<li
  class="ec-dropdown-search__search-area"
  data-test="ec-dropdown-search__search-area"
>
  <svg
    class="ec-icon ec-dropdown-search__search-icon"
  >
    <use
      xlink:href="#ec-simple-search"
    />
  </svg>
  <input
    autocomplete="off"
    class="ec-dropdown-search__search-input"
    data-test="ec-dropdown-search__search-input"
    placeholder="Random search placeholder"
  />
</li>
`;

exports[`EcDropdown > :props > should use the correct class when isInLightMode 1`] = `
<input
  class="ec-input-field__input ec-input-field__input--bg-gray-7 ec-input-field__input--has-icon ec-input-field__input--cursor-pointer"
  data-test="ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
  id="ec-input-field-1"
  placeholder=""
  readonly=""
  type="text"
/>
`;

exports[`EcDropdown > should render as expected 1`] = `
<div
  class="ec-dropdown ec-dropdown-search"
  data-test="ec-dropdown ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--has-icon ec-input-field__input--cursor-pointer"
        data-test="ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
        id="ec-input-field-1"
        placeholder=""
        readonly=""
        type="text"
      />
      <!--v-if-->
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
        data-test="ec-input-field__icon-wrapper"
      >
        <!--v-if-->
        <svg
          class="ec-icon ec-input-field__icon"
          data-test="ec-input-field__icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
      <!--v-if-->
    </div>
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <!--v-if-->
        <!--v-if-->
        
        
        
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdown > should render readonly input as a trigger 1`] = `
<input
  class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--has-icon ec-input-field__input--cursor-pointer"
  data-test="ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
  id="ec-input-field-1"
  placeholder=""
  readonly=""
  type="text"
/>
`;

exports[`EcDropdown > should use custom attributes 1`] = `
<div
  class="my-class ec-dropdown ec-dropdown-search"
  data-test="ec-dropdown ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--has-icon ec-input-field__input--cursor-pointer"
        data-test="my-data-test ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
        id="my-id"
        placeholder=""
        readonly=""
        type="text"
      />
      <!--v-if-->
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
        data-test="ec-input-field__icon-wrapper"
      >
        <!--v-if-->
        <svg
          class="ec-icon ec-input-field__icon"
          data-test="ec-input-field__icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
      <!--v-if-->
    </div>
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <!--v-if-->
        <!--v-if-->
        
        
        
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdown > should use given list-data-test attribute 1`] = `
<ul
  class="ec-dropdown-search__item-list"
  data-test="ec-dropdown-search__item-list my-test-list"
>
  <!--v-if-->
  <!--v-if-->
  
  
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
    title="Item 1"
  >
    
    Item 1
    
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
    title="Item 2"
  >
    
    Item 2
    
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
    title="Item 3"
  >
    
    Item 3
    
  </li>
  <li
    class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
    data-ec-tooltip-mock-content="Random text"
    data-ec-tooltip-mock-placement="right"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
    title="Item 4"
  >
    
    Item 4
    
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
    title="Item 5"
  >
    
    Item 5
    
  </li>
  
  
</ul>
`;
